--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,13 @@
 steps:
-- name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
-  entrypoint: "bash"
-  args:
-  - "-c"
-  - |
-    gcloud auth activate-service-account --key-file=/workspace/service-account-key.json
-    gcloud auth print-access-token --impersonate-service-account=189614076516-compute@developer.gserviceaccount.com | gcloud auth activate-service-account --access-token-file=-
-    gsutil cp gs://fresh1/your-file.txt .
+  - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
+    entrypoint: "bash"
+    args:
+      - "-c"
+      - |
+        gcloud auth print-access-token --impersonate-service-account=189614076516-compute@developer.gserviceaccount.com > token.txt
+        gcloud auth activate-service-account --access-token-file=token.txt
+        gsutil ls gs://fresh1
+
 
 options:
   logging: CLOUD_LOGGING_ONLY
