--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,9 +4,7 @@ steps:
     args:
       - "-c"
       - |
-        gcloud auth print-access-token --impersonate-service-account=189614076516-compute@developer.gserviceaccount.com > token.txt
-        gcloud auth activate-service-account --access-token-file=token.txt
-        gsutil ls gs://fresh1
+        gsutil ls gs://fresh1 --impersonate-service-account=189614076516-compute@developer.gserviceaccount.com
 
 
 options:
